--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "contentful": "^9.1.32",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
