--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "dev": "concurrently 'npm start' 'react-scripts start'"
   },
   "eslintConfig": {
     "extends": [
