--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "contentful": "^9.1.32",
+    "docx": "^7.4.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
