--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-  "name": "homepage",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:3333",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "contentful": "^9.1.32",
-    "docx": "^7.4.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "fs": "^0.0.1-security",
-    "heroku-ssl-redirect": "^0.1.1",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "node .",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently 'npm start' 'react-scripts start'"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "homepage",
+    "version": "0.1.0",
+    "private": true,
+    "proxy": "http://localhost:3333",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "contentful": "^9.1.32",
+        "docx": "^7.4.1",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "fs": "^0.0.1-security",
+        "heroku-ssl-redirect": "^0.1.1",
+        "path": "^0.12.7",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "node .",
+        "server": "node .",
+        "client": "react-scripts start",
+        "dev": "concurrently -n api,web -c auto \"npm:server\" \"npm:client\""
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "concurrently": "^9.2.1",
+        "cross-env": "^10.1.0"
+    }
 }
